k8s/events-list-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-list-service
  labels:
    app: events-list-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-list-service
  template:
    metadata:
      labels:
        app: events-list-service
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: events-list-service
          image: events-list-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8097
              name: http
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8097
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8097
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: events-list-service
  labels:
    app: events-list-service
spec:
  selector:
    app: events-list-service
  ports:
    - name: http
      port: 8097
      targetPort: 8097
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: events-list-service
spec:
  host: events-list-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
